apps/nextcloud/resources/coturn/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coturn-disable-internal-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: coturn
  policyTypes:
    - Egress
  egress:
    # Allow DNS resolution
    - to:
        - ipBlock:
            cidr: 169.254.25.10/32
    # Allow all outbound internet traffic
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.43.0.0/16
              - 10.0.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
